onsite tweaking and testing

--- a/client/app/game/game.less
+++ b/client/app/game/game.less
@@ -207,7 +207,7 @@ div#ui-main{
   }
 }
 div#main {
-  -webkit-transform: scaleY(1.12) scaleX(1.16) translateY(63px);
+  //-webkit-transform: scaleY(1.12) scaleX(1.16) translateY(63px);
   position: absolute !important;
   top: 0px;
   width: 1920px;
