GGC-33 Clean WUXGA resize

--- a/client/app/game/game.less
+++ b/client/app/game/game.less
@@ -157,8 +157,8 @@ img#highways { position: absolute; width: 70.5%; top: 2.5%; left: 18.35%; }
   /*src: url('../fonts/232MKSD_winTT/232MKM__.TTF') format('truetype');  Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
 }
 body {
-  width: 1920px;
-  height: 1080px;
+  //width: 1920px;
+  //height: 1080px;
   margin: 0;
 }
 
@@ -208,9 +208,9 @@ div#main {
   position: absolute !important;
   top: 0px;
   width: 1920px;
-  height: 1080px;
+  height: 1200px;
   background: url("../../bmp/gulfbrown.jpg") no-repeat;
-  background-size: 1920px 1200px;
+  //background-size: 1920px 1200px;
   overflow: hidden;
 }
 div#perspective_plane_container {
@@ -253,7 +253,7 @@ div#perspective_plane {
 
 #mapA, #mapB, #mapC, #foulGulf, #landmarks, #borderscrim {
   width: 1920px;
-  height: 1080px;
+  height: 1200px;
   position: absolute;
 }
 #foulGulf {
@@ -266,7 +266,8 @@ div#perspective_plane {
 
 
 div#borderscrim {
-  background-image: url('../../bmp/borderandscrim_wrn.png');
+  //background-image: url('../../bmp/borderandscrim_wrn.png');
+  background-image: url('../../bmp/borderandscrim_wrn_1200_tweak.png');
   z-index: 8;
   pointer-events: none;
   top:0;
@@ -319,3 +320,9 @@ score-board {
   opacity: 0.5;
 }
 
+
+.debugOverlay{
+  position: absolute;
+  top:0;
+  left:0;
+}
