--- a/client/app/game/game.css
+++ b/client/app/game/game.css
@@ -136,8 +136,6 @@ img#highways {
   /*src: url('../fonts/232MKSD_winTT/232MKM__.TTF') format('truetype');  Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
 }
 body {
-  width: 1920px;
-  height: 1080px;
   margin: 0;
 }
 .main-title {
@@ -172,9 +170,8 @@ div#main {
   position: absolute !important;
   top: 0px;
   width: 1920px;
-  height: 1080px;
+  height: 1200px;
   background: url("../../bmp/gulfbrown.jpg") no-repeat;
-  background-size: 1920px 1200px;
   overflow: hidden;
 }
 div#perspective_plane_container {
@@ -219,7 +216,7 @@ div#perspective_plane {
 #landmarks,
 #borderscrim {
   width: 1920px;
-  height: 1080px;
+  height: 1200px;
   position: absolute;
 }
 #foulGulf {
@@ -236,7 +233,7 @@ div#perspective_plane {
   background: url(../../bmp/overpop.png) 50% 0% no-repeat;
 }
 div#borderscrim {
-  background-image: url('../../bmp/borderandscrim_wrn.png');
+  background-image: url('../../bmp/borderandscrim_wrn_1200_tweak.png');
   z-index: 8;
   pointer-events: none;
   top: 0;
@@ -287,4 +284,9 @@ score-board {
 }
 .dim {
   opacity: 0.5;
+}
+.debugOverlay {
+  position: absolute;
+  top: 0;
+  left: 0;
 }
