--- a/client/app/game/game.less
+++ b/client/app/game/game.less
@@ -167,6 +167,11 @@ body {
 .main-title{
   height: 25px;
 }
+div#ui-vid{
+  position:relative;
+  width: 100%;
+  top:25%;
+}
 div#ui-main{
   position: relative;
   height: 33%;
@@ -320,5 +325,9 @@ score-board {
 
 .dim{
   opacity: 0.5;
+}
+
+.noHeight{
+  height:0;
 }
 
