--- a/client/app/game/game.less
+++ b/client/app/game/game.less
@@ -166,9 +166,10 @@ body {
   height: 25px;
 }
 div#ui-main{
-  position: relative;
+  position: absolute;
   height: 33%;
   top: 29%;
+  left:20%;
 
   & .title{
     line-height: 0;
@@ -205,7 +206,7 @@ div#ui-main{
   }
 }
 div#main {
-  position: absolute !important;
+  position: relative !important;
   top: 0px;
   width: 1920px;
   height: 1080px;
@@ -282,7 +283,8 @@ score-board {
 }
 
 .ggc-video-prologue{
-  margin-top: -22%;
+  margin-top: -22%;a
+  margin-left: 11%;
 }
 
 .stamp{
