--- a/client/app/game/game.less
+++ b/client/app/game/game.less
@@ -211,7 +211,7 @@ div#main {
   width: 1920px;
   height: 1200px;
   background: url("../../bmp/gulfbrown.jpg") no-repeat;
-  //background-size: 1920px 1200px;
+  background-size: 1920px 1200px;
   overflow: hidden;
 }
 div#perspective_plane_container {
@@ -260,9 +260,11 @@ div#perspective_plane {
 #foulGulf {
   /*background: -webkit-linear-gradient(top, #2F2727, #1a82f7);*/
   background: url(../bmp/gulfbrown.jpg) 50% 0 / 90%  no-repeat;
+  background-size: 1920px 1200px;
 }
 #mapA { background: url(../../bmp/currentpop.png) 50% 0% / 90% no-repeat; }
-#mapB { 	background: url(../../bmp/midpop.png) 50% 0% / 90% no-repeat; }
+#mapB { 	background: url(../../bmp/midpop.png) 50% 0% / 0% no-repeat;
+          background-size:1600px 1200px; }
 #mapC { 	background: url(../../bmp/overpop.png) 50% 0% / 90% no-repeat; }
 
 
