--- a/client/app/playerPanel/playerPanel.css
+++ b/client/app/playerPanel/playerPanel.css
@@ -172,6 +172,12 @@ div.panelInnerEnergy {
 .score.energy {
   color: #4e4efc;
 }
+.playerPanel {
+  width: 1920px;
+  position: absolute;
+  top: 100px;
+  margin-left: 775px;
+}
 .panelOuter {
   position: absolute;
   width: 375px;
@@ -182,19 +188,16 @@ div.panelInnerEnergy {
   transition: all 0.2s ease-in-out;
 }
 .panelOuter.environment {
-  left: 400px;
-  top: 700px;
-  -webkit-transform: rotateZ(29deg);
+  -webkit-transform: rotate(32deg) translateY(830px);
   transition: all 0.2s ease-in-out;
+  position: absolute;
 }
 .panelOuter.environment.retract {
-  left: 300px;
-  top: 870px;
-  -webkit-transform: rotateZ(29deg);
+  -webkit-transform: rotateZ(32deg) translateY(1030px);
   transition: all 0.2s ease-in-out;
 }
 .panelOuter.environment.fullRetract {
-  top: 980px;
+  -webkit-transform: rotate(32deg) translateY(1100px);
   transition: all 0.2s ease-in-out;
 }
 .panelOuter.environment i,
@@ -210,17 +213,15 @@ div.panelInnerEnergy {
   text-shadow: 0 0 2px black;
 }
 .panelOuter.economy {
-  left: 775px;
-  top: 793px;
+  -webkit-transform: rotate(0deg) translateY(830px);
   transition: all 0.2s ease-in-out;
+  position: absolute;
 }
 .panelOuter.economy.retract {
-  left: 775px;
-  top: 990px;
-  transition: all 0.2s ease-in-out;
+  -webkit-transform: rotate(0deg) translateY(1015px);
 }
 .panelOuter.economy.fullRetract {
-  top: 1100px;
+  -webkit-transform: rotate(0deg) translateY(1100px);
   transition: all 0.2s ease-in-out;
 }
 .panelOuter.economy i,
@@ -236,19 +237,16 @@ div.panelInnerEnergy {
   text-shadow: 0 0 2px black;
 }
 .panelOuter.energy {
-  right: 395px;
-  top: 695px;
-  -webkit-transform: rotateZ(-29deg);
+  -webkit-transform: rotate(-32deg) translateY(830px);
   transition: all 0.2s ease-in-out;
+  position: absolute;
 }
 .panelOuter.energy.retract {
-  right: 310px;
-  top: 875px;
-  -webkit-transform: rotateZ(-29deg);
+  -webkit-transform: rotate(-32deg) translateY(1030px);
   transition: all 0.2s ease-in-out;
 }
 .panelOuter.energy.fullRetract {
-  top: 985px;
+  -webkit-transform: rotate(-32deg) translateY(1100px);
   transition: all 0.2s ease-in-out;
 }
 .panelOuter.energy i,
