--- a/client/app/playerPanel/playerPanel.less
+++ b/client/app/playerPanel/playerPanel.less
@@ -205,6 +205,13 @@ div.panelInnerEnergy {
   }
 }
 
+.playerPanel {
+  width:1920px;
+  position:absolute;
+  top:100px;
+  margin-left:775px;
+}
+
 .panelOuter{
   position: absolute;
   width: 375px;
@@ -215,19 +222,16 @@ div.panelInnerEnergy {
   transition: all 0.2s ease-in-out;
 
   &.environment{
-    left: 400px;
-    top: 700px;
-    -webkit-transform: rotateZ(29deg);
+    -webkit-transform: rotate(32deg) translateY(830px);
     transition: all 0.2s ease-in-out;
+    position: absolute;
     &.retract{
-      left: 300px;
-      top: 870px;
-      -webkit-transform: rotateZ(29deg);
+      -webkit-transform: rotateZ(32deg) translateY(1030px);
       transition: all 0.2s ease-in-out;
     }
 
     &.fullRetract {
-      top:980px;
+      -webkit-transform: rotate(32deg) translateY(1100px);
       transition: all 0.2s ease-in-out;
     }
 
@@ -244,17 +248,15 @@ div.panelInnerEnergy {
     }
   }
   &.economy{
-    left: 775px;
-    top: 793px;
+    -webkit-transform: rotate(0deg) translateY(830px);;
     transition: all 0.2s ease-in-out;
+    position: absolute;
     &.retract{
-      left: 775px;
-      top: 990px;
-      transition: all 0.2s ease-in-out;
+      -webkit-transform: rotate(0deg) translateY(1015px);
     }
 
     &.fullRetract {
-      top:1100px;
+      -webkit-transform: rotate(0deg) translateY(1100px);
       transition: all 0.2s ease-in-out;
     }
 
@@ -269,19 +271,17 @@ div.panelInnerEnergy {
     }
   }
   &.energy{
-    right: 395px;
-    top: 695px;
-    -webkit-transform: rotateZ(-29deg);
+    -webkit-transform: rotate(-32deg) translateY(830px);;
     transition: all 0.2s ease-in-out;
+    position: absolute;
     &.retract{
-      right: 310px;
-      top: 875px;
-      -webkit-transform: rotateZ(-29deg);
+
+      -webkit-transform: rotate(-32deg) translateY(1030px);
       transition: all 0.2s ease-in-out;
     }
 
     &.fullRetract {
-      top:985px;
+      -webkit-transform: rotate(-32deg) translateY(1100px);
       transition: all 0.2s ease-in-out;
     }
 
