added navPad to make editor work

--- a/client/partials/base-list.html
+++ b/client/partials/base-list.html
@@ -1,4 +1,5 @@
 <div ng-include="'components/navbar/navbar.html'"></div>
+<div class = "navPad"></div>
 <div class = "container" ng-controller="BaseCtrl">
     <div ng-class="css('rowFluid')" class="row list-header">
         <div class="header-lhs col-sm-8 span8">
