--- a/client/partials/base-edit.html
+++ b/client/partials/base-edit.html
@@ -1,10 +1,11 @@
 <div ng-include="'components/navbar/navbar.html'"></div>
+<div class = "navPad"></div>
 <div ng-controller="BaseCtrl">
     <!--This is the header section-->
     <div ng-class="css('rowFluid')" class="edit-header">
         <!--The left hand side contains important fields from the data-->
         <div class="header-lhs col-sm-8 span8">
-            
+
         </div>
         <!--The right hand side contains buttons to Save, Cancel, Delete and create New-->
         <div class="header-rhs col-sm-2 span2">
