Delete giant movie / Encode videos

--- a/client/app/game/game.css
+++ b/client/app/game/game.css
@@ -124,14 +124,14 @@ img#highways {
 @font-face {
   font-family: '232MKB';
   src: url('../../assets/fonts/232MKSD_winTT/232MKB__.TTF') format('truetype');
-
+  
   /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
   /*src: url('../fonts/232MKSD_winTT/232MKM__.TTF') format('truetype');  Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
 }
 @font-face {
   font-family: '232MKUL';
   src: url('../../assets/fonts/232MKSD_winTT/232MKUL_.TTF') format('truetype');
-
+  
   /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
   /*src: url('../fonts/232MKSD_winTT/232MKM__.TTF') format('truetype');  Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
 }
@@ -158,7 +158,7 @@ div#ui-main {
   position: absolute;
   height: 33%;
   top: 29%;
-  left: 20%;
+  width: 100%;
 }
 div#ui-main .title {
   line-height: 0;
