GGC-46 Merge Ray's broken branch

--- a/client/app/game/game.less
+++ b/client/app/game/game.less
@@ -29,17 +29,17 @@
 };
 
 
- .scenarioWrap{
-   overflow: hidden;
-   padding: 0 20px 0 30px;
+.scenarioWrap{
+  overflow: hidden;
+  padding: 0 20px 0 30px;
 
-   margin: 10px;
-   margin-left: 0;
-   -webkit-clip-path: url(#cliphex);
-   background-color: fade(@deep-blue,85);
-   width: 100%;
-   height:100%;
- }
+  margin: 10px;
+  margin-left: 0;
+  -webkit-clip-path: url(#cliphex);
+  background-color: fade(@deep-blue,85);
+  width: 100%;
+  height:100%;
+}
 .scenario-card {
   -webkit-transition: 1s all;
   -webkit-flex: auto;
@@ -69,7 +69,7 @@
       .bg-energy;
     }
     &.economy{
-     .bg-economy;
+      .bg-economy;
     }
     &.environment{
       .bg-environment;
@@ -201,18 +201,18 @@ div#ui-main{
 
 
 
-      transition: .5s linear all;
-      &.ng-enter {
-        opacity: 1;
-        height: 25px;
+    transition: .5s linear all;
+    &.ng-enter {
+      opacity: 1;
+      height: 25px;
 
 
-      }
-      &.ng-hide {
-        opacity: 0;
-        height:0;
+    }
+    &.ng-hide {
+      opacity: 0;
+      height:0;
 
-      }
+    }
 
 
 
@@ -278,7 +278,7 @@ div#perspective_plane {
 }
 #mapA { background: url(../../bmp/currentpop.png) 50% 0%  no-repeat; }
 #mapB { 	background: url(../../bmp/midpop.png) 50% 0%  no-repeat;
-          background-size:1680px 1200px; }
+  background-size:1680px 1200px; }
 #mapC { 	background: url(../../bmp/overpop.png) 50% 0%  no-repeat; }
 
 
@@ -300,7 +300,7 @@ score-board {
 }
 
 .ggc-video-prologue{
- // margin-top: -22%;
+  margin-top: 22%;
 }
 
 .stamp{
