--- a/client/app/playerPanel/playerPanel.css
+++ b/client/app/playerPanel/playerPanel.css
@@ -29,26 +29,34 @@ p.tab-body {
 }
 .btn-icon {
   background: url("../../svg/buttonOL.svg") 50% 50% no-repeat;
-  width: 100px;
-  height: 50px;
+  width: 144px;
+  height: 82px;
   padding: 35px;
-  margin: 10px;
+  margin: 15px;
+  background-size: 110px 82px;
+  font-size: 1.75em;
   position: relative;
-  top: 90px;
+  top: 80px;
 }
 .btn-icon.block {
-  background-size: 124px 82px;
+  background-size: 110px 82px;
 }
 .btn-icon.pass {
-  background-size: 114px 82px;
+  background-size: 110px 82px;
+}
+.btn-icon.environment {
+  top: 90px;
+}
+.btn-icon.energy {
+  top: 90px;
 }
 .btn-icon.selected.block {
   background: url("../../svg/buttonBLOCK.svg") 50% 50% no-repeat;
-  background-size: 124px 82px;
+  background-size: 110px 82px;
 }
 .btn-icon.selected.pass {
   background: url("../../svg/buttonPASS.svg") 50% 50% no-repeat;
-  background-size: 114px 82px;
+  background-size: 110px 82px;
 }
 .btn-icon.ng-hide-add,
 .my-element.ng-hide-remove {
