--- a/client/app/playerPanel/playerPanel.less
+++ b/client/app/playerPanel/playerPanel.less
@@ -38,31 +38,41 @@ p.tab-body {
 .btn-icon {
   background: url("../../svg/buttonOL.svg") 50% 50% no-repeat;
   &.block {
-    background-size: 124px 82px;
+    background-size: 110px 82px;
   }
   &.pass {
-    background-size: 114px 82px;
+    background-size: 110px 82px;
   }
-  width: 100px;
-  height: 50px;
+  width: 144px;
+  height: 82px;
   padding: 35px;
-  margin: 10px;
+  margin: 15px;
+  background-size: 110px 82px;
+  font-size:1.75em;
 
   //transition: 0.25s linear all;
   position: relative;
-  top: 90px;
+  top: 80px;
+
+  &.environment {
+    top:90px;
+  }
+
+  &.energy {
+    top:90px;
+  }
 
 
   &.selected {
     &.block {
       background: url("../../svg/buttonBLOCK.svg") 50% 50% no-repeat;
-      background-size:124px 82px;
+      background-size:110px 82px;
 
     }
 
     &.pass {
       background: url("../../svg/buttonPASS.svg") 50% 50% no-repeat;
-      background-size: 114px 82px;
+      background-size: 110px 82px;
 
     }
   }
