--- a/client/app/vars.less
+++ b/client/app/vars.less
@@ -6,7 +6,7 @@
 //@light-blue: #46dada;
 @teal:#049591;
 @deep-blue: #335E5C;
-
+@warn-color: red;
 
 
 
@@ -42,6 +42,7 @@
 .bg-energy{.bgcolor(@energy-color)};
 .bg-environment{.bgcolor(@environment-color)};
 .bg-economy{.bgcolor(@economy-color)};
+.bg-warning{.bgcolor(@warn-color)};
 
 .bgcolor(@color){
   background-color: desaturate(@color,20);
