--- a/client/app/game/game.less
+++ b/client/app/game/game.less
@@ -74,6 +74,9 @@
     &.environment{
       .bg-environment;
     }
+    &.warning{
+      .bg-warning;
+    }
   }
 
 }
@@ -108,6 +111,7 @@
 
 #tampa.city { /*background:url(../../svg/citycornerR.svg) 64px -10px /.9em no-repeat; */ }
 img#highways { position: absolute; width: 70.5%; top: 2.5%; left: 18.35%; }
+
 .scenario-card:nth-of-type(1) {
   &.clearTransform{
     transform: perspective(0) rotateY(0) translate(0);
@@ -136,6 +140,9 @@ img#highways { position: absolute; width: 70.5%; top: 2.5%; left: 18.35%; }
   &.chosen {
     transform: perspective(1000px) rotateY(0deg) translate(-275px);
   }
+}
+.scenario-card:only-of-type{
+  transform: perspective(0) rotateY(0) translate(0);
 }
 
 
