--- a/client/app/app.less
+++ b/client/app/app.less
@@ -1,6 +1,19 @@
 @import (reference) "vars.less";
 
+@font-face {
+  font-family: '232MKB';
+  src: url('../../assets/fonts/232MKB__.TTF') format('truetype');
 
+  /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
+  /*src: url('../fonts/232MKSD_winTT/232MKM__.TTF') format('truetype');  Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
+}
+@font-face {
+  font-family: '232MKUL';
+  src: url('../../assets/fonts/232MKUL_.TTF') format('truetype');
+
+  /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
+  /*src: url('../fonts/232MKSD_winTT/232MKM__.TTF') format('truetype');  Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
+}
 
 /**
  * App-wide Styles
