--- a/client/app/playerPanel/playerPanel.less
+++ b/client/app/playerPanel/playerPanel.less
@@ -196,7 +196,9 @@ div.panelInnerEnergy {
 
 .score{
   font-family: "Glyphicons Halflings";
-  & .up{
+  font-size: 20px;
+  line-height: 0;
+ /* & .up{
     #textShadow.up;
   }
   & .down{
@@ -207,7 +209,7 @@ div.panelInnerEnergy {
   }
   & .down{
     #textShadow.down;
-  }
+  } */
   &.environment{
     .text-environment;
   }
