--- a/client/app/playerPanel/playerPanel.less
+++ b/client/app/playerPanel/playerPanel.less
@@ -54,12 +54,22 @@ p.tab-body {
   position: relative;
   top: 80px;
 
+  &.attract {
+    top: -20px;
+  }
+
   &.environment {
     top:90px;
+    &.attract {
+      top: -20px;
+    }
   }
 
   &.energy {
     top:90px;
+    &.attract {
+      top: -20px;
+    }
   }
 
 
@@ -167,6 +177,7 @@ div.bottomPlane {
   position: absolute;
   width: 375px;
   height: 450px;
+  font-family: "232MKSD";
 }
 div.topPlane {
   background: url("../../svg/paneltop_n.svg") 50% 0 no-repeat;
