--- a/client/app/game/game.less
+++ b/client/app/game/game.less
@@ -92,9 +92,10 @@
   letter-spacing: 1px;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.84);
   &:before{
+    font-family: Lucida Sans Unicode, sans-serif;
     position: relative;
     top: -10px;
-    content: "\25F8";
+    content: "◤";
     margin-top: 20px;
   }
   &.leftlabel:before{
@@ -103,7 +104,7 @@
   &.leftlabel:after{
     position: relative;
     top: -10px;
-    content: "\25F9";
+    content: "◥";
     margin-top: 20px;
   }
 }
