Font fixing in player panel

--- a/client/app/playerPanel/playerPanel.css
+++ b/client/app/playerPanel/playerPanel.css
@@ -9,10 +9,11 @@
   color: #d6f9f2;
 }
 .tab-body {
-  font-family: 'eurostile-condensed';
+  font-family:"232MKUL";
   color: white;
   margin-left: 10px;
   margin-right: 10px;
+  font-size:14px;
 }
 p.tab-body {
   margin-left: 25px;
