--- a/client/app/playerPanel/playerPanel.less
+++ b/client/app/playerPanel/playerPanel.less
@@ -13,10 +13,11 @@
 }
 
 .tab-body {
-  .euro;
+  font-family:"232MKUL";
   color:white;
   margin-left:10px;
   margin-right:10px;
+  font-size:14px;
 }
 
 p.tab-body {
