--- a/client/app/game/game.less
+++ b/client/app/game/game.less
@@ -218,7 +218,7 @@ div#main {
   top: 0px;
   width: 1920px;
   height: 1200px;
-  background: url("../../bmp/gulfbrown.jpg") no-repeat;
+  //background: url("../../bmp/gulfbrown.jpg") no-repeat;
 
   background-size: 1980px 1300px;
   overflow: hidden;
@@ -267,11 +267,33 @@ div#perspective_plane {
   width: 1920px;
   height: 1200px;
   position: absolute;
+
 }
 #foulGulf {
-  /*background: -webkit-linear-gradient(top, #2F2727, #1a82f7);*/
   background: url(../bmp/gulfbrown.jpg) 50% 0  no-repeat;
   background-size: 1920px 1200px;
+}
+.water {
+  width: 1920px;
+  height: 1200px;
+  position: absolute;
+  -webkit-transition: 3s all;
+  opacity:1;
+  &.clear {
+    background: url(../../bmp/gulfclear.jpg) 50% 0  no-repeat;
+    background-size: 1980px 1300px;
+  }
+  &.normal {
+    background: url(../../bmp/gulfbrowner_mockup.png) 50% 0  no-repeat;
+    background-size: 1980px 1300px;
+  }
+  &.brown {
+    background: url(../../bmp/gulfbrown.jpg) 50% 0  no-repeat;
+    background-size: 1980px 1300px;
+  }
+  &.transparent {
+    opacity:0;
+  }
 }
 #mapA { background: url(../../bmp/currentpop.png) 50% 0%  no-repeat; }
 #mapB { 	background: url(../../bmp/midpop.png) 50% 0%  no-repeat;
@@ -280,7 +302,6 @@ div#perspective_plane {
 
 
 div#borderscrim {
-  //background-image: url('../../bmp/borderandscrim_wrn.png');
   background-image: url('../../bmp/borderandscrim_wrn_1200_tweak.png');
   //z-index: 8;
   pointer-events: none;
