--- a/client/app/playerPanel/playerPanel.less
+++ b/client/app/playerPanel/playerPanel.less
@@ -435,7 +435,8 @@ div.panelInnerEnergy {
 
 div.hint-wrap{
 
-  padding: 0 12px 0 12px;
+  //padding: 0 12px 0 12px;
+  margin-top: 18px;
   background:none !important;
   height: auto;
   display:-webkit-box;
@@ -457,7 +458,7 @@ h3.hint{
   position: relative;
   width: 90%;
   margin-left: 5%;
-  height: 52px;
+  height: 58px;
   max-height: 67px;
   overflow: visible;
 }
