Working on panel transition

--- a/client/app/playerPanel/playerPanel.less
+++ b/client/app/playerPanel/playerPanel.less
@@ -197,7 +197,7 @@ div.panelInnerEnergy {
   width: 375px;
   height: 350px;
   -webkit-transform-style: preserve-3d;
-  transition: all 0.2s ease-in-out;
+  //transition: all 0.2s ease-in-out;
 }
 
 .panelOuterenvironment h3 { border:#c8e893 solid 1px;
