--- a/client/app/game/game.less
+++ b/client/app/game/game.less
@@ -174,7 +174,10 @@ div#ui-vid{
   margin:0;
   padding:0;
 }
-div#ui-main{
+
+
+
+div#ui-main,div#ui-tutorial{
   position: absolute;
   height: 33%;
   top: 29%;
@@ -212,6 +215,11 @@ div#ui-main{
 
 
   }
+}
+
+div#ui-tutorial{
+ padding: 0 27% 0 27%;
+  color: white;
 }
 div#main {
   position: relative !important;
